eZ Comments change log


1.0.0Beta2
 - Added cache support in comment/view 
 - Removed 'notification' field in ezcomComment persistent object and database
 - Changed the license header in code
 - Fixed bug: if a subscriber is disabled in database, he can still subscribe comment.